--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,3 +1,7 @@
 <h1>This is the project index page</h1>
 
 <%= link_to "Add Project", new_project_path %>
+
+<% @projects.each do |project| %>
+  <h2><%= link_to project.name, project_path(project) %></h2>
+<% end %>
