add Progress CRUD and views.

--- a/app/views/progresses/new.html.erb
+++ b/app/views/progresses/new.html.erb
@@ -1,3 +1,6 @@
-<h1>This is the progress new page</h1>
-
-<%= render 'form' %>
+<div class="col-md-10 col-md-offset-1">
+  <div class="new-progress-form">
+    <h1> Progress Update </h1>
+    <%= render 'form' %>
+  </div>
+</div>
