--- a/app/views/progresses/_form.html.erb
+++ b/app/views/progresses/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for([@project, @project.progresses.build]) do |f| %>
+<%= simple_form_for ([@project, @project.progresses.build]) do |f| %>
   <%= f.input :comment %>
-  <%= f.button :submit %>
+  <%= f.button :submit, class: "btn-custom2" %>
 <% end %>
