--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,7 +1,7 @@
-<h1>This is the project index page</h1>
-
-<%= link_to "Add Project", new_project_path %>
-
-<% @projects.each do |project| %>
-  <h2><%= link_to project.name, project_path(project) %></h2>
+<% if current_user %>
+  <% @projects.each do |project| %>
+    <h2><%= link_to project.name, project_path(project) %></h2>
+  <% end %>
+<% else %>
+  <h2>There are no projects to display. Please signup or signin to create and display projects.</h2>
 <% end %>
