--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,24 +9,35 @@
   </head>
 
   <body>
-  	<nav class="navbar navbar-default">
+    <nav class="navbar navbar-default">
   		<div class="container">
   			<div class="navbar-header">
-          <% if current_user %>
-  				  <%= link_to "Projects", root_path, class: "navbar-brand" %>
-          <% end %>
+  				<%= link_to "Projects", root_path, class: "navbar-brand"  %>
   			</div>
 
   			<ul class="nav navbar-nav navbar-right">
-  				<% if current_user %>
-  					<li><%= current_user.name %> | <%= link_to "Sign Out", '/signout' %></li>
+  				<% if user_signed_in? %>
+  					<li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
   				<% else %>
-  					<li><%= link_to "Sign Up", '/signup' %> | <%= link_to "Sign in", '/signin' %></li>
+  					<li><%= link_to "Sign Up", new_user_registration_path %></li>
+  					<li><%= link_to "Log In", new_user_session_path %></li>
   				<% end %>
   			</ul>
 
   			<ul class="nav navbar-nav">
-  				<% if current_user %>
+  				<li class="dropdown">
+  					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Category<span class="caret"></span></a>
+
+  					<ul class="dropdown-menu" role="menu">
+  						<% Category.all.each do |category| %>
+  							<li class="<%= 'active' if params[:category] == category.name %>">
+  								<%= link_to category.name, projects_path(category: category.name), class: "link" %>
+  							</li>
+  						<% end %>
+  					</ul>
+  				</li>
+
+  				<% if user_signed_in? %>
   					<li><%= link_to "Add Project", new_project_path %></li>
   				<% end %>
   			</ul>
