--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,12 +1,6 @@
 <%= simple_form_for @project do |f| %>
+  <%= select_tag(:category_id, options_for_select(@categories), :prompt => "Select Category") %>
   <%= f.input :name, label: "Project Name" %>
   <%= f.input :desc, label: "Description" %>
-  <!-- <#%= f.input :action, collection: Project.actions, label: "Do Or Don't Do?" %>
-  <#%= f.input :frequency, collection: Project.frequencies, label: "How Frequent?" %> -->
-  <!-- <#%= f.input :action, as: :radio_buttons,
-  :collection => [[1, "Do"], [2, "Dont"]],
-  label: false %>
-  <#%= f.input :frequency, as: :radio_buttons,
-  :collection => [[1, "Great"], [2, "Okay"], [3, "Bad"]] %> -->
   <%= f.button :submit %>
 <% end %>
