--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,7 +1,15 @@
-<% if current_user %>
-  <% @projects.each do |project| %>
-    <h2><%= link_to project.name, project_path(project) %></h2>
-  <% end %>
+<h1 class="current-category"><%= params[:category] %></h1>
+
+<% if @projects.count == 0 %>
+  <h3>There are no projects in this category</h3>
 <% else %>
-  <h2>There are no projects to display. Please signup or signin to create and display projects.</h2>
+  <div class="row">
+    <% @projects.each do |project| %>
+      <div class="col-md-3">
+        <a href="/projects/ <%= project.id %>">
+          <%= image_tag project.image.url(:project_index), class: "project" %>
+        </a>
+      </div>
+    <% end %>
+  </div>
 <% end %>
