--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,3 +1,7 @@
-<h1>This is the project new page</h1>
+<div class="col-md-10 col-md-offset-1">
+	<div class="new-project-form">
+		<h1>New Project</h1>
 
-<%= render 'form' %>
+		<%= render 'form' %>
+	</div>
+</div>
