--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,17 +1,33 @@
-<%= @project.name %>
-<%= @project.desc %>
-<%= @project.category.name %>
+<div class="row">
+  <div class="col-md-4">
+    <%= image_tag @project.image.url(:project_show), class: "project-show" %>
+  </div>
+  <div class="col-md-8">
+    <div class="project-info">
+      <h2 class="project-name"><%= @project.name %></h2>
+      <h4 class="project-name"><%= @project.category.name %></h4>
+      <p class="project-desc"><%= @project.desc %></p>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-12">
+    <div class="progress">
+      <h1>Progress</h1>
+      <%= render @project.progresses %>
+      <div>
+        <%= link_to "Add Progress", new_project_progress_path(@project), class: "btn-custom" %>
+      </div>
+    </div>
+  </div>
+</div>
 
 <div class="links btn-group">
   <% if user_signed_in? %>
     <% if @project.user_id == current_user.id %>
-      <%= link_to "Edit", edit_project_path(@project) %>
-      <%= link_to "Delete", project_path(@project), method: :delete, data: { confirm: "Are you sure?" } %>
+      <%= link_to "Edit", edit_project_path(@project), class: "btn btn-custom" %>
+      <%= link_to "Delete", project_path(@project), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-custom" %>
     <% end %>
   <% end %>
 </div>
-
-<h1>Progress Updates</h1>
-<%= link_to "Add Progress", new_project_progress_path(@project) %>
-<%= render @project.progresses %>
-<%= link_to "Home", projects_path %>
