--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,14 +2,12 @@
 <html>
   <head>
     <title>GrowthMindset</title>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
-
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
   <body>
-    <nav class="navbar navbar-default">
+  	<nav class="navbar navbar-default">
   		<div class="container">
   			<div class="navbar-header">
   				<%= link_to "Projects", root_path, class: "navbar-brand"  %>
@@ -26,7 +24,7 @@
 
   			<ul class="nav navbar-nav">
   				<li class="dropdown">
-  					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Category<span class="caret"></span></a>
+  					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Category <span class="caret"></span></a>
 
   					<ul class="dropdown-menu" role="menu">
   						<% Category.all.each do |category| %>
@@ -44,12 +42,13 @@
   		</div>
   	</nav>
 
-	<p class="notice"><%= notice %></p>
-	<p class="alert"><%= alert %></p>
 
-	<div class="container">
-  	<%= yield %>
-	</div>
+  	<p class="notice"><%= notice %></p>
+  	<p class="alert"><%= alert %></p>
 
-</body>
+  	<div class="container">
+  		<%= yield %>
+  	</div>
+
+  </body>
 </html>
