--- a/app/views/progresses/_progress.html.erb
+++ b/app/views/progresses/_progress.html.erb
@@ -1,9 +1,12 @@
 <div class="progress">
   <p class="progress-comment"><%= progress.comment %></p>
 
-  <div class="links btn-group">
-    <%= link_to "Edit", edit_project_progress_path(progress.project, progress), class: 'btn btn_custom' %>
-    <%= link_to "Delete", project_progress_path(progress.project, progress),
-                      method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-custom" %>
-  </div>
-</div>
+  <% if user_signed_in? %>
+    <% if progress.user_id == current_user.id %>
+      <div class="links btn-group">
+        <%= link_to "Edit", edit_project_progress_path(progress.project, progress), class: 'btn btn_custom' %>
+        <%= link_to "Delete", project_progress_path(progress.project, progress),
+                          method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-custom" %>
+      </div>
+    <% end %>
+  <% end %>
