--- a/app/views/progresses/edit.html.erb
+++ b/app/views/progresses/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="col-md-10 col-md-offset-1">
   <div class="edit-progress-form">
-    <h1>Edit Progress</h1>
+    <h1>Edit Review</h1>
     <%= simple_form_for ([@project, @progress]) do |f| %>
       <%= f.input :comment %>
       <%= f.button :submit, class: "btn-custom2" %>
