--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,4 +1,5 @@
 <%= simple_form_for @project do |f| %>
+  <%= f.file_field :image %>
   <%= select_tag(:category_id, options_for_select(@categories), :prompt => "Select Category") %>
   <%= f.input :name, label: "Project Name" %>
   <%= f.input :desc, label: "Description" %>
